--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #726f6f;
-  min-height: 90vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +24,13 @@
   color: white;
 }
 
+
+.App-body {
+  background-color: #7b7777;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .App-footer {
   background-color: #7b7777;
