--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #726f6f;
+  background-color:  #7b7777;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
