--- a/src/App.css
+++ b/src/App.css
@@ -14,33 +14,31 @@
 }
 
 .App-header {
-  background-color:  #7b7777;
+  background-color:  #E7C2C2;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
 
 .App-body {
-  background-color: #7b7777;
+  background-color: #E7C2C2;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .App-footer {
-  background-color: #7b7777;
+  background-color: #E7C2C2;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 1vmin);
-  color: white;
+
 }
 
 .App-link {
